--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
       box-sizing: border-box;
     }
     body {
+      position: fixed;
+      top: 0;
+      left: 0;
       height: 100vh;
       width: 100vw;
     }
     canvas {
-      position: fixed;
+      position: absolute;
       top: 0;
       left: 0;
     }
